--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <li><a href="downloads/haha2.bat">haha2</a> (.bat file)</li>
         <li><a href="downloads/haha3.vbs">haha3</a> (.vbs file)</li>
         <li><a href="downloads/haha4.vbs">haha4</a> (.vbs file)</li>
-        <li><a href="downloads/haha5.vbs">haha5</a> (.bat file)</li>
-        <li><a href="downloads/haha6.vbs">haha6</a> (.ahk file, requires AutoHotKey)</li>
+        <li><a href="downloads/haha5.bat">haha5</a> (.bat file)</li>
+        <li><a href="downloads/haha6.ahk">haha6</a> (.ahk file, requires AutoHotKey)</li>
     </ul>
     
