--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   <body>
     <h1>haha*</h1>
     <p>A series of joke scripts</p>
-    <p>haha* downloads:</p>
+    <p>haha* program list:</p>
     <ul>
-        <li><a href="downloads/haha.bat">haha</a> (.bat file)</li>
-        <li><a href="downloads/haha2.bat">haha2</a> (.bat file)</li>
-        <li><a href="downloads/haha3.vbs">haha3</a> (.vbs file)</li>
-        <li><a href="downloads/haha4.vbs">haha4</a> (.vbs file)</li>
-        <li><a href="downloads/haha5.bat">haha5</a> (.bat file)</li>
-        <li><a href="downloads/haha6.ahk">haha6</a> (.ahk file, requires AutoHotKey)</li>
+        <li><a href="programs/haha">haha</a> (.bat file)</li>
+        <li><a href="programs/haha2">haha2</a> (.bat file)</li>
+        <li><a href="programs/haha3">haha3</a> (.vbs file)</li>
+        <li><a href="programs/haha4">haha4</a> (.vbs file)</li>
+        <li><a href="programs/haha5">haha5</a> (.bat file)</li>
+        <li><a href="programs/haha6">haha6</a> (.ahk file, requires AutoHotKey)</li>
     </ul>
     
