add the rest of the pages

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>haha*</title>
-    <link rel="stylesheet" href="index.css" type="text/css">
+    <link rel="stylesheet" href="css/index.css" type="text/css">
   </head>
   <body>
     <h1>haha*</h1>
