--- a/programs/haha3.html
+++ b/programs/haha3.html
@@ -2,14 +2,15 @@
 <html>
   <head>
     <title>haha</title>
-    <link rel="stylesheet" href="../programs.css" type="text/css">
+    <link rel="stylesheet" href="../css/programs.css" type="text/css">
   </head>
   <body>
-    <h1>haha</h1>
-    <p>(quick explanation)</p>
-    <p>(notes)</p>
+    <h1>haha3</h1>
+    <p>Voice from above</p>
+    <p>Spoiler: <span class="spoiler">A voice repeatatedly says "fidget spinner"</span></p>
     <p>Downloads:</p>
     <ul>
-      <li>downloads go here</li>
+      <li><a href="../downloads/haha3Safe.vbs">Windows, safe</a></li>
+      <li><a href="../downloads/haha3SlightlyUnsafe.vbs">Windows, slightly unsafe</a></li>
     </ul>
     
