--- a/programs/haha4.html
+++ b/programs/haha4.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>haha</title>
-    <link rel="stylesheet" href="../programs.css" type="text/css">
+    <title>haha4</title>
+    <link rel="stylesheet" href="../css/programs-alternate.css" type="text/css">
   </head>
   <body>
-    <h1>haha</h1>
-    <p>(quick explanation)</p>
-    <p>(notes)</p>
+    <h1>haha4</h1>
+    <p>Wait, what?!</p>
+    <p>For this one it's best not to read the spoiler/source code. Just run it and carry on with your day.</p>
+    <p>Spoiler: <span class="spoiler">Normal: Enters "fidget spinner" into whatever text box you are in after five seconds, then terminates.<br>Unsafe: Repeats "hey guys my name is FIDGET SPINNER and I want to spin my nama jeff" into text boxes repeatedly.</p>
     <p>Downloads:</p>
     <ul>
-      <li>downloads go here</li>
+      <li><a href="../downloads/haha4.vbs">Windows</a></li>
+      <li><a href="../downloads/haha4LessSafe.vbs">Windows, less safe</a></li>
     </ul>
+    <p><a href="haha3">Previous</a> <a href="http://hahascripts.tk">Main</a> <a href="haha5">Next</a></p>
     
