--- a/programs/haha6.html
+++ b/programs/haha6.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>haha</title>
-    <link rel="stylesheet" href="../programs.css" type="text/css">
+    <title>haha6</title>
+    <link rel="stylesheet" href="../css/programs-alternate.css" type="text/css">
   </head>
   <body>
-    <h1>haha</h1>
-    <p>(quick explanation)</p>
-    <p>(notes)</p>
+    <h1>haha6</h1>
+    <p>Now it's all upside-down</p>
+    <p>Requires <a href="https://autohotkey.com/">AutoHotKey</a>.</p>
+    <p>Spoiler: <span class="spoiler">Does stuff with text. I'm not even going to explain it, run it yourself.</span></p>
     <p>Downloads:</p>
     <ul>
-      <li>downloads go here</li>
+      <li><a href="../downloads/haha6.ahk">Windows</a></li>
     </ul>
+    <p><a href="haha5">Previous</a> <a href="http://hahascripts.tk">Main</a></p>
     
