--- a/programs/haha.html
+++ b/programs/haha.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>haha</title>
-    <link rel="stylesheet" href="../programs.css" type="text/css">
+    <link rel="stylesheet" href="../css/programs.css" type="text/css">
   </head>
   <body>
     <h1>haha</h1>
@@ -10,6 +10,7 @@
     <p>Spoiler: <span class="spoiler">Creates an endless loop of nested "fidget spinner" folders.</span></p>
     <p>Downloads:</p>
     <ul>
-      <li><a href="../downloads/haha.bat">haha.bat</a></li>
+      <li><a href="../downloads/haha.bat">Windows</a></li>
     </ul>
+    <p><a href="http://hahascripts.tk">Main</a> <a href="haha2">Next</a></p>
     
