--- a/programs/haha2.html
+++ b/programs/haha2.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>haha2</title>
-    <link rel="stylesheet" href="../programs.css" type="text/css">
+    <link rel="stylesheet" href="../css/programs.css" type="text/css">
   </head>
   <body>
     <h1>haha2</h1>
@@ -10,6 +10,8 @@
     <p>Spoiler: <span class="spoiler">Creates multiple command windows with the message "fidget spinner"</span></p>
     <p>Downloads:</p>
     <ul>
-      <li><a href="../downloads/haha2_safe.bat">haha2-safe.bat</a></li>
+      <li><a href="../downloads/haha2.bat">Windows</a></li>
+      <li><a href="../downloads/haha2Safe.bat">Windows, safe</a></li>
     </ul>
+    <p><a href="haha">Previous</a> <a href="http://hahascripts.tk">Main</a> <a href="haha2">Next</a></p>
     
