--- a/index.html
+++ b/index.html
@@ -3,18 +3,28 @@
   <head>
     <title>haha*</title>
     <link rel="stylesheet" href="css/index.css" type="text/css">
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-100707441-1', 'auto');
+      ga('send', 'pageview');
+
+  </script>
   </head>
   <body>
     <h1>haha*</h1>
     <p>A series of joke scripts</p>
     <p>haha* program list:</p>
     <ul>
-        <li><a href="programs/haha">haha</a> (.bat file)</li>
-        <li><a href="programs/haha2">haha2</a> (.bat file)</li>
-        <li><a href="programs/haha3">haha3</a> (.vbs file)</li>
-        <li><a href="programs/haha4">haha4</a> (.vbs file)</li>
-        <li><a href="programs/haha5">haha5</a> (.bat file)</li>
-        <li><a href="programs/haha6">haha6</a> (.ahk file, requires AutoHotKey)</li>
+        <li><a href="programs/haha">haha</a> (Windows)</li>
+        <li><a href="programs/haha2">haha2</a> (Windows)</li>
+        <li><a href="programs/haha3">haha3</a> (Windows)</li>
+        <li><a href="programs/haha4">haha4</a> (Windows)</li>
+        <li><a href="programs/haha5">haha5</a> (Windows)</li>
+        <li><a href="programs/haha6">haha6</a> (Windows, requires AutoHotKey)</li>
     </ul>
     </body>
 </html>
