--- a/programs/haha4.html
+++ b/programs/haha4.html
@@ -3,6 +3,16 @@
   <head>
     <title>haha4</title>
     <link rel="stylesheet" href="../css/programs-alternate.css" type="text/css">
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-100707441-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
   </head>
   <body>
     <h1>haha4</h1>
